<resources>
    <string name="app_name">DisasterMate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fuelload">Fuel load describes the amount of combustibles in the landscape. For example, bark, the more the number of small leaves, the stronger the burning will be.  "\n\n"

        Loose fuel is easier to burn than compacted fuel because loose fuel oxygen is more abundant. </string>
    <string name="fuelmoisture">Dry fuel will burn quickly, but damp or wet fuel may not burn at all.
 "\n\n"
        As a consequence, the time since rainfall and the amount of rain received is an important consideration in assessing bushfire danger.
 "\n\n"
        Often a measure of the drought factor, or moisture deficit, will be used as an indicator of extreme bushfire weather conditions.</string>
    <string name="windspeed">Wind will blow the flame onto the fuel, ignite the new fuel, and continue to bring oxygen, thus promoting the rapid spread of the flame."\n\n"

        Spotting can occur up to 30km downwind from the fire front. </string>
    <string name="ambienttemperature">The higher the temperature the more likely it is that a fire will start or continue to burn.
"\n\n"
        This is because the fuel is closer to its ignition point at high temperatures and pre-heated fuel loads burn faster. </string>
    <string name="relativehumidity">Dry air promotes a greater intensity fire than moist air.
"\n\n"
        Plants become more flammable at a low humidity because they release their moisture more easily. </string>
    <string name="slopeangle">Fires pre-heat their fuel source through radiation and convection.
"\n\n"
        As a result, fires accelerate when travelling uphill and decelerate travelling downhill.
"\n\n"
        The steepness of the slope plays an important role in the rate of fire spread.</string>
    <string name="ignitionsource">Bushfires can originate from both human activity and natural causes with lightning the predominant natural source, accounting for about half of all ignitions in Australia.
"\n\n"
        Fires of human origin currently account for the remainder and are classified as accidental or deliberate.  </string>

    <string name="before">- Close all doors and windows"\n\n"
- Move stock or large animals to large paddocks with short grass"\n\n"
- Turn off gas supply"\n\n"
- Prepare fire ready kit"\n\n"
- Plan the evacuation route"\n\n"
- Leave early"\n\n"
- Mitigate the risk for fire </string>

    <string name="during">- If your clothes catch fire, stop, drop and roll"\n\n"
- If a fire starts in the farm, stop it ASAP"\n\n"
- Get down low and stay out of smoke."\n\n"
- Alert other people on your way out."\n\n"
- Get out and stay out."\n\n"
- Meet at a safe place such as the letterbox or footpath outside your home."\n\n"
- Call 000 (triple zero) from a mobile phone or a neighbours phone. Ask for FIRE when the call is connected."\n\n"

  </string>

    <string name="after">- Check if it is safe to stay at home"\n\n"
- Inspect and repair or reconnect the fire, gas, electricity, water supply and/or telephone line"\n\n"
- Your insurance will be the most important single aspect of recovering from a fire loss"\n\n"
- If you cant remain in your property, find an accommodation or local safe zone"\n\n"
- Clean up your property and get the air moving"\n\n"
- Contact local police. Inform them that your property has been involved in a fire and is vacant."\n\n" </string>

    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tracking_enabled">Tracking enabled</string>
    <string name="tracking_already_enabled">Tracking Already Enabled</string>
    <string name="legal">LEGAL DISCLAIMER:\nWhile we make every effort to ensure that material on this application is accurate and up to date (unless denoted as archived material), such material does in no way constitute the provision of professional advice or a prediction that should be relied upon.\n" +
                "\n" +
                "DisasterMate does not guarantee, and accepts no legal liability whatsoever arising from or connected to, the accuracy, reliability, currency or completeness of any material contained on this application or any linked site. Users should seek appropriate independent professional advice prior to relying on or entering into any commitment based on material published here, which material is purely published for reference purposes alone.\n" +
                "\n" +
                "By using the application, you will be deemed to have released and discharged DisasterMate from all liability (including negligence) for all claims, losses expenses, damages, and costs the user may incur as a result of relying on the information on this application, including liability in respect of any defamatory material on any database or in respect of any dealings with any work (including software) in which you hold any copyright or other intellectual property right. By using the application, you will be assuming all risks associated with the use of this application, including risks to your phone, software or data by any virus which might be transmitted, downloaded or activated via this or an external website and/or its contents.\n" +
                "\n" +
                "Material, summarised views, standards or recommendations of third parties or recommendations made by this application do not necessarily reflect the views of DisasterMate or indicate a commitment to a course of action.\n</string>
    <string name="DisasterMate">DisasterKasa</string>
    <string name="access_token">pk.eyJ1IjoiZnprODg4IiwiYSI6ImNqemh1a3M4MzB6eGgzbmxrMWx0c3Q3b3AifQ.--BckGBvrRT-TXTMJsaDAA</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="updating_risk_rate">Updating Risk Rate</string>
    <string name="spinner_title">Sort By</string>
    <string name="radius_title">All Radius</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="title_activity_flood2do_list">Flood2doList</string>
</resources>
