<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

            <TextView
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="Causes"
                android:textSize="20dp"
                android:textStyle="bold" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">



        <Button
            android:id="@+id/fuel_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fuel Load"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


        <EditText
            android:id="@+id/fuel_load_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/fuelload"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/fuel_moisture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fuel Moisture"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/fuel_moisture_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/fuelmoisture"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>


        <Button
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wind Speed"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/wind_speed_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/windspeed"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/ambient_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ambient Temperature"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/ambient_temperature_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/ambienttemperature"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/relative_humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Relative Humidity"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/relative_humidity_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/relativehumidity"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/slope_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Slope Angle"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"

            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/slope_angle_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/slopeangle"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/ignition_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ignition Source"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/ignitionsource_text"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/ignitionsource"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.LinearLayoutCompat>