<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundclr"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/HeaderBar"
        android:elevation="4dp"
        />
    <TextView
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="Click to learn more"
        android:textStyle="bold" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/cardwhite"
                android:gravity="center"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/relative_humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/relativehumidity"
                    android:textSize="20dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardwhite"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

                <Button
                    android:id="@+id/before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/before"
                    android:text="Before the Bushfire"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />


                <TextView
                    android:id="@+id/before_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/before"
                    android:textSize="20dp"

                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardwhite"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/during"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/during"
                    android:text="During the Bushfire"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/during_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/during"
                    android:textSize="20dp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardwhite"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/after"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/after"
                    android:text="After the Bushfire"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="0dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:id="@+id/after_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:text="@string/after"
                    android:textSize="20dp"
                    android:visibility="gone" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.LinearLayoutCompat>